<resources>

    <string name="app_name">CupOmatic</string>
    <string name="getReady">Get Ready</string>
    <string name="start">Start</string>
    <string name="number_of_bowls">Number of bowls?</string>
    <string name="input_number">Input number</string>
    <string name="interval">Interval</string>
    <string name="Break">Break</string>
    <string name="round_one">Round one</string>
    <string name="round_two">Round Two</string>
    <string name="round_three">Round Three</string>
    <string name="vibrate">Vibrate</string>
    <string name="sample">Sample</string>
    <string name="Save">Save Settings</string>
    <string name="Ready">Ready</string>
    <string name="Settings">Settings</string>
    <string name="Help">Info</string>
    <string name="NA_in_advanced_mode"> Disabled</string>



    <string name="Advanced_mode_description">Adds sample collection, and tasting rounds to the session.</string>
    <string name="Voice_prompts_description">Adds voice prompts.</string>
    <string name="Vibrate_description">If turned on, the phone vill vibrate for each action.</string>
    <string name="Interval_description">Shows the interval time between each action for each bowl.</string>
    <string name="Break_description">The time at which you will break the crust on the cupping bowl. The arch progress bar labelled "Br" indicates how many bowls should have been broken at that moment in time."</string>
    <string name="Sample_description">The point in time in which you take a coffee sample for testing (TDS etc.).The arch progress bar labelled "Sa" indicates how many bowls should have been broken at that moment in time. Advance mode must be on to utilise this feature.</string>
    <string name="Rounds_description">The rounds will be called by the voice prompts. These are the points in which you should start the rounds of tasting. Advance mode must be on to utilise this feature.</string>
    <string name="Main_timer_description"> Is the large timer at the top of the main screen which shows the time since the start of the session.</string> I
    <string name="Bowl_indications_description">These are the small circular progress views at the bottom of the screen. They indicate how many bowls the specific action should have already been performed on at that given moment.</string>
    <string name="Contact_description">For more information, and feedback, click here to email me: info@cupomatic.com.</string>

    <string-array name="Contact_description_array">
        <item>For more information, and feedback, click here to email me:</item>
        <item><u>info@cupomatic.com</u></item>
    </string-array>


    <string name="Four">Ready</string>


    <string-array name="Classes">
        <item>Mode</item>
        <item>Interval</item>
        <item>Break</item>
        <item>Sample</item>
        <item>Round One</item>
        <item>Round Two</item>
        <item>Round Three</item>
        <item>Vibrate</item>
    </string-array>


</resources>
